# news-data-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data_sample/: crawl_data.json  merge_statement.sql
data_sample/s3_local/news_data_250824_103350/parquet/: part-00000-45101558-3af3-4b3d-9756-02ee25a6c867-c000.snappy.parquet
data_sample/s3_local/news_data_250824_112527/csv/: part-00000-90e02790-3137-4e8d-9bfa-60736ca77e26-c000.csv
data_sample/s3_local/news_data_250824_112527/json/: part-00000-321d6c23-71f7-497e-b58b-faf5eafd618f-c000.json
data_sample/s3_local/news_data_250824_112527/parquet/: part-00000-29bd1660-b7fc-4ed5-9bf5-1ce107952182-c000.snappy.parquet
data_sample/s3_local/news_data_250824_210226/csv/: part-00000-1540ac0c-a6df-414b-93a6-20f61e15d6a8-c000.csv
data_sample/s3_local/news_data_250824_210226/excel/: data.xlsx
data_sample/s3_local/news_data_250824_210226/parquet/: part-00000-694c13ce-5278-4f20-88bb-0f270b44cd55-c000.snappy.parquet
data_sample/s3_local/news_data_250824_211612/excel/: data.xlsx
data_sample/s3_local/news_data_250824_211612/parquet/: part-00000-60aeb5f3-fa42-473e-87a8-88b8ebe132fe-c000.snappy.parquet
src/: main.py
src/conf/: __init__.py  config.py
src/helpers/: __init__.py  spark_utils.py  utils.py
src/ingestion/: pipeline.py
src/ingestion/apis/: api_client.py  news_api_client.py
src/integration/: load_postgres.py  load_s3.py  processor.py
src/models/: __init__.py  news.py
